@@ -6,6 +6,7 @@
     <title>jQuery treetable</title>
     <link rel="stylesheet" href="stylesheets/screen.css" media="screen" />
     <link rel="stylesheet" href="stylesheets/jquery.treetable.css" />
+    <link rel="stylesheet" href="stylesheets/jquery.treetable.theme.default.css" />
   </head>
   <body>
     <div id="main">
@@ -86,6 +87,10 @@
 $("<b>#your_table_id</b>").treeTable();
 &lt;/script&gt;</pre>
 
+      <h3><a name="theme">Styling the tree</a></h3>
+
+      <p>By default the tree has little styling. Use the file <tt>stylesheets/jquery.treetable.theme.default.css</tt> as a template for your own styling. You can also just use this default theme, in that case don't forget to copy the images from <tt>images</tt> and update the paths in the CSS accordingly.</p>
+
       <h3><a name="tree">Representing your tree in a table</a></h3>
       <p>When you pasted the above code and adjusted it to reflect your situation, you enabled the <em>possibility</em> of displaying a tree in your table. To make the tree actually display as a tree you have to add <tt>data-tt-id</tt> and <tt>data-tt-parent-id</tt> attributes to your table rows (<tt>tr</tt>).</p>
 
@@ -110,7 +115,7 @@ $("<b>#your_table_id</b>").treeTable();
 
       <h3>Settings</h3>
 
-      <table>
+      <table class="treeTable">
         <thead>
           <tr>
             <th>Setting</th>
@@ -203,7 +208,7 @@ $("<b>#your_table_id</b>").treeTable();
 
       <h3>Events</h3>
 
-      <table>
+      <table class="treeTable">
         <thead>
           <tr>
             <th>Setting</th>
